--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,24 +1,16 @@
+/* 768px a  */
 .card {
-
+    margin:  2rem 0;
+    box-shadow: rgba(0, 0, 0, 0.04) 0px 3px 5px;
+    width: 100%;
 }
 
-.card__body {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-
-    text-decoration: none;
-    
+.link__featured {
+    /* width: 50%; */
 }
 
 .card__featured {
     width: 100%;
-    
-}
-
-.link {
-    text-decoration: none;
-    color: #000;
 }
 
 .card__title {
@@ -26,6 +18,10 @@
 }
 
 .card__excerpt {
+    margin: 1rem 0;
+}
+
+.card__excerpt p {
     font-family: 'Roboto', sans-serif;
     font-weight: 300;
 }
@@ -34,13 +30,11 @@
     text-decoration: none;
 }
 
-.card__footer {
-    display: flex;
-    margin: 1rem 0;
-    justify-content: flex-end;
+.card__btn-container {
+    margin: 1.2rem 0;
 }
 
-.card__footer a {
+.card__btn {
     text-decoration: none;
     background-color: #61dafb;
     background-color: #e7e7e7;
@@ -48,4 +42,19 @@
     color: #000;
     font-family: 'Roboto';
     font-weight: 300;
+}
+
+@media(min-width: 500px) {
+    .card {
+        display: flex;
+        flex-direction: row;
+        align-items: flex-start;
+        gap: 1rem;
+    }
+
+    .card__featured {
+        height: 100%;
+        width: 15rem;
+        object-fit: contain;
+    }
 }
