--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,3 +1,29 @@
 .posts {
     padding: 1rem;
 }
+
+@media(min-width: 768px) {
+    .posts {
+        margin: 5rem 3rem;
+    }
+}
+
+@media(min-width: 1100px) {
+    .posts {
+        margin: 5rem 10rem;
+    }
+}
+
+
+.posts__btn {
+    border: none;
+    text-decoration: none;
+    background-color: #61dafb;
+    background-color: #e7e7e7;
+    padding: .5rem;
+    color: #000;
+    font-family: 'Roboto';
+    font-weight: 300;
+    font-size: 1.1rem;
+    cursor: pointer;
+}
