--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -7,7 +7,7 @@
     display: flex;
     gap: 4px;
     justify-content: space-between;
-    align-items: baseline;
+    /* align-items: baseline; */
     padding: 1rem 3rem;
     position: fixed;
     background-color: #e7e7e7;
@@ -18,6 +18,7 @@
     z-index: 10;
     font-family: 'Montserrat', sans-serif ;
     box-shadow: rgba(0, 0, 0, 0.04) 0px 3px 5px;
+    filter: opacity(98%);
 }
 
 .menu {
@@ -38,7 +39,7 @@
     width: 20px;
 }
 
-.menu__btn span::after, menu__btn span::before {
+.menu__btn span::after, .menu__btn span::before {
     content: "";
     display: block;
     width: 20px;
@@ -46,7 +47,22 @@
     background-color: currentColor;
     margin-top: 5px;
     position: relative;
+    transition: .3s;
 }
+
+.menu__btn.active span {
+    border-top-color: transparent;
+}
+
+.menu__btn.active span::before {
+    transform: rotate(135deg);
+}
+
+.menu__btn.active span::after {
+    transform: rotate(-135deg);
+    top: -7px;
+}
+
 
 .menu__items {
     /* display: none; */
